# Playing_around

Jesper/: Aruco_marker_small.odt  aruco_marker_3.odt  big_box.scad  data_for_wTc.txt  marker.scad  test_with_output  tool_box.scad  tool_box.stl  transformation_matrix_stabilized
Jesper/Estimating_tcp_to_marker/: CMakeLists.txt  data.txt
Jesper/opencv_estimating_relative_rotation/: CMakeLists.txt
Jesper/opencv_estimating_transformation/: CMakeLists.txt  some_data.txt
Jesper/opencv_test_optimizing_function_gradient13/: CMakeLists.txt
Jesper/opencv_test_optimizing_function_gradient13/include/: find_gradient.h
Jesper/opencv_test_optimizing_function_gradient13/src/: test_opt_func.cpp
Jesper/robwork_change_transformation/: CMakeLists.txt
Jesper/robwork_change_transformation/Mini-Picker/: Mini-Picker_v2_DHJoints.wc.xml  SceneCollisionSetup.prox.xml  SceneProximitySetup.prox.xml
Jesper/robwork_change_transformation/Mini-Picker/Geometry/: floor.ac  handlingstation.ac  single_box_bot.ac  single_box_s2.ac  single_box_s3.ac
Jesper/robwork_change_transformation/src/: change_tcpTmarker.cpp
Jesper/robwork_dataset_creation_for_jacobian_solution/: CMakeLists.txt
Jesper/robwork_dataset_creation_for_jacobian_solution/Mini-Picker_changed/: Mini-Picker_v2_DHJoints.wc.xml
Jesper/robwork_dataset_creation_for_jacobian_solution/Mini-Picker_changed/Geometry/: Boxes.ac.bak  single_box.mtl
Jesper/robwork_dataset_creation_for_jacobian_solution/Mini-Picker_orig/: Mini-Picker_v2_DHJoints.wc.xml
Jesper/robwork_dataset_creation_for_jacobian_solution/Mini-Picker_orig/Geometry/: place.ac  place.mtl  rod.mtl  scapebins.stl
Jesper/robwork_dataset_creation_for_jacobian_solution/Mini-Picker_orig/ScapeTool/: suction18mm.stl
Jesper/robwork_dataset_creation_for_jacobian_solution/src/: dataset_creation.cpp
Jesper/robwork_test_visual_servoing/: CMakeLists.txt
Jesper/robwork_test_visual_servoing/Mini-Picker/: Mini-Picker_v2_DHJoints.wc.xml
Jesper/robwork_test_visual_servoing/Mini-Picker/Geometry/: cell_nowalls.ac
Jesper/robwork_test_visual_servoing/Mini-Picker/ScapeTool/: big_box.stl
Jesper/robwork_test_visual_servoing/Mini-Picker/UR5DHJoints/: DeviceParam.xml
Jesper/robwork_test_visual_servoing/src/: test_visual_servoing.cpp
UR5/: UR_script
aruco_creation/: CMakeLists.txt
calibrationdata/: ost.txt  ost.yaml
src/: Start_position_for_picking_up_green_brick  testing_transformation_matrix_node_old_two_way_method.cpp  testing_transformation_matrix_node_random_sphere.cpp
(+119 files in other folders)
